<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewFavoriteAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/buttonUnfavorite"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFavoriteAddress"
        android:text="@string/distance"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/buttonUnfavorite"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonUnfavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/buttonBackgroundColor"/>

</RelativeLayout>