<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textViewDefectiveAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDefectiveAddress"
        android:text="@string/distance"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewDefectiveReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textViewDefectiveAddress"
        android:layout_toLeftOf="@id/buttonMarkToRepair"
        android:text="@string/reason"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonMarkToRepair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentEnd="true" />

</RelativeLayout>