<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.ReportActivity">

    <Button
        android:id="@+id/buttonReportBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/button_background_color"
        android:textColor="@color/button_text_color"
        android:text="@string/back"/>

    <ImageView
        android:id="@+id/imageview_charging_station"
        android:layout_width="94dp"
        android:layout_height="81dp"
        android:layout_below="@id/buttonReportBack"
        app:srcCompat="@drawable/ic_baseline_electrical_services_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewChargingStationAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/buttonReportBack"
        android:layout_toRightOf="@id/imageview_charging_station" />

    <TextView
        android:id="@+id/textview_additional_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/imageview_charging_station"
        android:textSize="25sp"
        android:text="@string/additional_information" />

    <EditText
        android:id="@+id/editTextAdditionalInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/textview_additional_information"
        android:background="@color/background_color"
        android:autofillHints="Additional information"
        tools:ignore="LabelFor"
        android:inputType="text"
        android:hint="@string/input_additional_information" />

    <Button
        android:id="@+id/buttonReportConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/report" />

</RelativeLayout>