<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/item_curved"
        android:elevation="3dp">

        <TextView
            android:id="@+id/textViewRouteEachAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@id/buttonRouteEachRemove"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/recycler_view_text_color"
            android:textStyle="bold"
            android:text="@string/address"/>

        <TextView
            android:id="@+id/textViewRouteEachCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textViewRouteEachAddress"
            android:layout_toLeftOf="@id/buttonRouteEachRemove"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/recycler_view_text_color"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewRouteEachDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewRouteEachCity"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/buttonRouteEachRemove"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/recycler_view_text_color"
            android:textStyle="bold"
            android:text="@string/distance"/>

        <Button
            android:id="@+id/buttonRouteEachRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:backgroundTint="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:textStyle="bold"
            android:text="@string/remove"/>

    </RelativeLayout>

</RelativeLayout>